css/newsfeed.css
/* Track */
::-webkit-scrollbar-track {
  margin-top: 0px;
}


.newsfeed-Space .full-page {
  display: flex;
  flex-direction: row-reverse;
  padding-top:0px;

}




.VLOGO {
  display            : flex;
  width              : 40px;
  height             : 40px;
  background-image   : url(../img/LOGO-DANIELA-14.svg);
  background-size    : contain;
  background-repeat  : no-repeat;
  background-position: center;
  align-items        : center;
  justify-content    : center;

  cursor: pointer;
}




.VLOGO-wrapper {

  display         : flex;
  background-color: rgba(255, 255, 255, 0);
  justify-content : center;
  align-items     : center;
  padding         : 10px;
}

.newsfeed-Space {
  display       : flex;
  flex-direction: column;
  height        : 100vh;
  width         : 100%;
  justify-content: space-between;
}

.newsfeed-Zone{
  display       : flex;
  flex-direction: column;
  height        : 100vh;
  width         : 100%;
  justify-content: space-between;
}



.surface-wrap {
  display         : flex;
  align-items     : center;
  justify-content : center;
  width           : 100%;
  height          : 100%;
  background-color: var(--v-lavender-plane);
  padding         : 8px;

}

.feed-wrapper {
  display              : grid;
  height               : 100%;
  width: 100%;
  grid-template-columns: 2fr 1fr;
  padding              : 0px !important;
  background-color     : #f7f7ff !important;
  grid-gap             : 8px;
 
}

.feed-scroll {

  display: flex;

  flex-direction: column;

  width: 100%;

  height: 100%;

  background-color: #f7f7ff;

  padding    : 8px;
  padding-top: 0px;


}

.page-name {
  display         : flex;
  width           : 100%;
  height          : 66px;
  border          : solid 1px var(--v-lavender-plane);
  background-color: #fefdff;
  border-radius   : 10px
}

.N-Header {

  display: flex;

  height: auto;

  width: 100%;

  background-color: #f7f7ff;
}

.Newsfeed-Left {
  display         : flex;
  flex-direction  : column;
  width           : 100%;
  height          : 100%;
  border          : solid 1px var(--v-lavender-plane);
  border          : solid 1.5px var();
  background-color: #fefdff;
  border-radius   : 10px;
}


.Newsfeed-Right {
  display         : flex;
  flex-direction  : column;
  width           : 100%;
  height          : 100%;
  border          : solid 1px var(--v-lavender-plane);
  background-color: #fefdff;
  border-radius   : 10px
}





@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}



/* animations */

.v-pressed {

  display: flex;
  width  : auto;
  height : auto;

  transition: all 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
  transform : scale(100%);

}

.v-pressed:hover {

  transition: all 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
  transform : scale(103%);

}

.v-pressed:active {

  transition: all 0.18s cubic-bezier(0.165, 0.84, 0.44, 1);
  transform : scale(100%);

}


.nav-lnk i {
  transition: transform 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
  transform : translate(0, 0);

  transition: scale 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
  transform : scale(100%);
}

.nav-lnk:hover i {
  transform: translate(0, -10%);

  transition: scale 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
  transform : scale(110%);
}


/* asside bar */


.static-bar {
  display       : flex;
  flex-direction: column;
  height        : 100%;
  width         : 100%;
}

.collapsable-comp {
  display        : flex;
  position       : absolute;
  bottom         : 0;
  left           : 0;
  width          : auto;
  /* height      : calc(100% - 92px); */
  height         : auto;
  /* border      : solid 2px red; */
  align-items    : flex-end;
  justify-content: flex-start;
  margin-left    : 94px;
  margin-bottom  : 10px;
  padding        : 4px;
  overflow       : hidden;
}

.settings-modal {
  display         : flex;
  align-items     : flex-end;
  justify-content : center;
  background-color: #f7f7ff;
  border          : solid 1px #ffffff86;
  height          : 180px;
  width           : 150px;
  box-shadow      : rgba(165, 148, 243, 0.349) 0px -1px 0px 0px;
  border-radius   : 10px;
  overflow        : hidden;
  position        : relative;
  left            : -200px;
  transition      : all 1s cubic-bezier(0, 1.02, 0, 1.02);
}

.settings-modal.shown {
  left      : 0px;
  box-shadow: rgba(165, 148, 243, 0.26) 0px -1px 008px 0px;
  transition: all .5s cubic-bezier(0, 1.02, 0, 1.02);

}

.modal-btn {
  display: flex;
  width  : 100%;
}

.collapsable-comp .logout-button {
  padding      : 18px;
  border-radius: 0;
  width        : 100% !important;
  max-width    : 100% !important;

}


.SWAP-sidebar .nav-lnk .lnk-ico {

  display        : flex;
  justify-content: center;
  flex-direction : column;
  align-items    : center;
  border-radius  : 4px;
  padding        : 10px;
  width          : 60px !important;
  aspect-ratio   : 1/1;
  text-decoration: none;
  color          : #362c6b;
  font-weight    : 800;
  font-size      : .75em;
}


.SWAP-sidebar .nav-lnk .lnk-ico i {

  display   : flex;
  transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
  opacity   : .1;
}

.insights-btn {
  display       : flex;
  flex-direction: column;

  align-items    : center;
  justify-content: center;
}

.create-btn {
  display       : flex;
  flex-direction: column;

  align-items    : center;
  justify-content: center;
}

.settings-btn {

  display       : flex;
  flex-direction: column;

  align-items    : center;
  justify-content: center;

}



.SWAP-sidebar .nav-links {
  display        : flex;
  flex-direction : column;
  grid-gap       : 10px;
  height         : 100%;
  width          : 100%;
  justify-content: space-between;
  align-items    : center;
}
/* ... */

